# data-science

./: .gitignore  LICENSE.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
api_interfaces/: README.md
api_interfaces/benchmarking/: .gitignore
api_interfaces/local_inference/: fetch_images_from_api.py  index_inferrer_output.py  palette_adapter.py  requirements.txt
api_interfaces/nerd/: Dockerfile  package-lock.json  (+1 more)
apis/: README.md
clip-search/: README.md  docker-compose.yml
hal/: README.md  controller.py  enable_ipywidgets  hal  install.sh  requirements.in  requirements.txt
image_extraction/: README.md  TODO.md  docker-compose.yml
indexing-colours-for-knn-queries/: README.md  docker-compose.yml
jupyter/: README.md
knn-colours/: docker-compose.yml
local_inference/: index_inferrer_output.py  palette_adapter.py  requirements.in  run_inference.py
notebooks/: Dockerfile  README.md  docker-compose.yml
prismic-pipeline-prototype/: README.md
scripts/: download_all_images.py  download_oai_harvest.py  generate_api_identifiers.py  put_wikidata_embeddings_in_dynamodb.py
search-as-you-type/: .gitignore  README.md  docker-compose.yml
semantic-search/: .gitignore  README.md  docker-compose.yml
stories-similarity/: .gitignore  README.md  docker-compose.yml
testing/: blah.ipynb  blah.md
text-embeddings/: docker-compose.yml
ui/: package-lock.json  package.json
weco-datascience/: Makefile
weco_datascience/: README.md  __init__.py  aws.py  batching.py  credentials.py  http.py  image.py  reporting.py
(+647 files in other folders)
